project/stage/parse_tests/tests/reject/bad_var_decl/incorrect_type.ul
boolean i(void goodVar) {

    voiD oops;
}
